--- a/Ambrosia.nuspec
+++ b/Ambrosia.nuspec
@@ -26,6 +26,12 @@
     <file src="Clients\CSharp\AmbrosiaLibCS\bin\$configuration$\netstandard2.0\AmbrosiaLibCS.pdb" target="lib\netstandard2.0" />
     <file src="Clients\CSharp\AmbrosiaLibCS\bin\$configuration$\netstandard2.0\AmbrosiaLib.dll" target="lib\netstandard2.0" />
     <file src="Clients\CSharp\AmbrosiaLibCS\bin\$configuration$\netstandard2.0\AmbrosiaLib.pdb" target="lib\netstandard2.0" />
+    <file src="Clients\CSharp\AmbrosiaLibCS\bin\$configuration$\netstandard2.0\AzureBlobsLogPicker.dll" target="lib\netstandard2.0" />
+    <file src="Clients\CSharp\AmbrosiaLibCS\bin\$configuration$\netstandard2.0\AzureBlobsLogPicker.pdb" target="lib\netstandard2.0" />
+    <file src="Clients\CSharp\AmbrosiaLibCS\bin\$configuration$\netstandard2.0\GenericLogPicker.dll" target="lib\netstandard2.0" />
+    <file src="Clients\CSharp\AmbrosiaLibCS\bin\$configuration$\netstandard2.0\GenericLogPicker.pdb" target="lib\netstandard2.0" />
+    <file src="Clients\CSharp\AmbrosiaLibCS\bin\$configuration$\netstandard2.0\ImmortalCoordinator.dll" target="lib\netstandard2.0" />
+    <file src="Clients\CSharp\AmbrosiaLibCS\bin\$configuration$\netstandard2.0\ImmortalCoordinator.pdb" target="lib\netstandard2.0" />
     <file src="Clients\CSharp\AmbrosiaLibCS\bin\$configuration$\netstandard2.0\SharedAmbrosiaTools.dll" target="lib\netstandard2.0" />
     <file src="Clients\CSharp\AmbrosiaLibCS\bin\$configuration$\netstandard2.0\SharedAmbrosiaTools.pdb" target="lib\netstandard2.0" />
   </files>
