--- a/Samples/HelloWorld/IClient2/IClient2.csproj
+++ b/Samples/HelloWorld/IClient2/IClient2.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>net461;netcoreapp3.1</TargetFrameworks>
@@ -8,8 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Ambrosia.LibCS" Version="1.0.15" Condition="'$(Configuration)' == 'Release' " />
-    <PackageReference Include="Microsoft.Ambrosia.LibCSDebug" Version="1.0.15" Condition="'$(Configuration)' == 'Debug'" />
+    <PackageReference Include="Microsoft.Ambrosia.LibCS" Version="1.0.16" Condition="'$(Configuration)' == 'Release' " />
+    <PackageReference Include="Microsoft.Ambrosia.LibCSDebug" Version="1.0.16" Condition="'$(Configuration)' == 'Debug'" />
   </ItemGroup>
 
 </Project>
