--- a/AmbrosiaTest/AmbrosiaTest/app.config
+++ b/AmbrosiaTest/AmbrosiaTest/app.config
@@ -25,6 +25,9 @@
 		<add key="TestLocalInstanceExeWorkingDirectory" value="..\..\..\..\..\TestLocalService\bin\Release" />
 		<add key="TestCMPDirectory" value="..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\Cmp" />
 		<add key="AmbrosiaLogDirectory" value="..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
+		<!-- NOTE: InProc log files are relative to PTI. This directory is relative path from PerfTestJobExeWorkingDirectory -->
+		<add key="PTIAmbrosiaLogDirectory" value="..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
+
 	</appSettings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
