--- a/Samples/StreamingDemo/AnalyticsAPI/AnalyticsAPI.csproj
+++ b/Samples/StreamingDemo/AnalyticsAPI/AnalyticsAPI.csproj
@@ -1,10 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>net46</TargetFrameworks>
+    <TargetFrameworks>net461</TargetFrameworks>
     <Platforms>x64</Platforms>
-    <RuntimeIdentifiers>win7-x64</RuntimeIdentifiers>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <RootNamespace>AnalyticsAPI</RootNamespace>
   </PropertyGroup>
   <PropertyGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch('$(TargetFramework)', '^net\d'))">
@@ -17,8 +15,7 @@
     <DefineConstants>NETCORE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Ambrosia.LibCS" Version="1.0.16" Condition="'$(Configuration)' == 'Release' " />
-    <PackageReference Include="Microsoft.Ambrosia.LibCSDebug" Version="1.0.16" Condition="'$(Configuration)' == 'Debug'" />
+    <PackageReference Include="Microsoft.Ambrosia.LibCS" Version="1.0.18" />
     <PackageReference Include="Trill">
       <Version>2018.3.2.1</Version>
     </PackageReference>
