--- a/InternalImmortals/XamarinCommandShell/XamarinCommandShell/XamarinCommandShell.csproj
+++ b/InternalImmortals/XamarinCommandShell/XamarinCommandShell/XamarinCommandShell.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.4.4" />
+    <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1451" />
   </ItemGroup>
