--- a/AmbrosiaTest/AmbrosiaTest/AmbrosiaTest.csproj
+++ b/AmbrosiaTest/AmbrosiaTest/AmbrosiaTest.csproj
@@ -80,6 +80,7 @@
     <Compile Include="InProc_TCP_Test.cs" />
     <Compile Include="MTF_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="JS_Tests.cs" />
     <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
