--- a/AmbrosiaTest/AmbrosiaTest/AmbrosiaTest.csproj
+++ b/AmbrosiaTest/AmbrosiaTest/AmbrosiaTest.csproj
@@ -131,6 +131,8 @@
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="JS_CodeGen_TestFiles\PI.ts" />
+    <TypeScriptCompile Include="JS_CodeGen_TestFiles\TS_AmbrosiaTag.ts" />
+    <TypeScriptCompile Include="JS_CodeGen_TestFiles\TS_Types.ts" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
