--- a/Samples/StreamingDemo/GeneratedSourceFiles/AnalyticsAPIGenerated/latest/AnalyticsAPIGenerated.csproj
+++ b/Samples/StreamingDemo/GeneratedSourceFiles/AnalyticsAPIGenerated/latest/AnalyticsAPIGenerated.csproj
@@ -4,6 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Ambrosia.LibCS" Version="1.0.18" />
+    <PackageReference Include="Microsoft.Ambrosia.LibCS" Version="1.0.20" />
     <PackageReference Include="Trill">
       <Version>2018.3.2.1</Version>
     </PackageReference>
