--- a/InternalImmortals/PerformanceTestInterruptible/API/ServerAPI.csproj
+++ b/InternalImmortals/PerformanceTestInterruptible/API/ServerAPI.csproj
@@ -12,6 +12,6 @@
     <DefineConstants>NETCORE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Ambrosia.LibCS" Version="1.0.20" />
+    <ProjectReference Include="..\..\..\Clients\CSharp\AmbrosiaLibCS\AmbrosiaLibCS.csproj" />
   </ItemGroup>
 </Project>
