--- a/Samples/HelloWorld/IClient2/IClient2.csproj
+++ b/Samples/HelloWorld/IClient2/IClient2.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Ambrosia.LibCS" Version="1.0.20" />
+    <PackageReference Include="Microsoft.Ambrosia.LibCS" Version="1.0.21" />
   </ItemGroup>
 
 </Project>
