--- a/Samples/StreamingDemo/AnalyticsAPI/AnalyticsAPI.csproj
+++ b/Samples/StreamingDemo/AnalyticsAPI/AnalyticsAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFrameworks>net461</TargetFrameworks>
@@ -14,7 +14,7 @@
     <DefineConstants>NETCORE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Ambrosia.LibCS" Version="1.0.20" />
+    <PackageReference Include="Microsoft.Ambrosia.LibCS" Version="1.0.21" />
     <PackageReference Include="Trill">
       <Version>2018.3.2.1</Version>
     </PackageReference>
